# breadthNPageInSYCL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
annotatedLonestar/: README.md
annotatedLonestar/bfs/: README.md
annotatedLonestar/pagerank/: README.md
bench/: README.md  bigGraphsToRun.txt  graphsToRun.txt  run_bfs.sh  run_pagerank.sh
bench/bfs/: README.md
bench/pagerank/: README.md
bfs/: CMakeLists.txt  README.md  bfs-data-driven.cpp  bfs-group-sched.cpp  bfs-naive.cpp  bfs-outlined.cpp  bfs-sycl-group-sched.cpp  bfs-sycl-naive.cpp  bfs-topology-driven.cpp  support.cpp
bfs/depth/: CMakeLists.txt  bfs-depth.cpp
bfs/naive/: CMakeLists.txt  bfs-naive.cpp
bfs/topology/: bfs-naive.cpp
bfs/worklist/: BFSPush.cpp  BFSPush.h  CMakeLists.txt  bfs-topology-driven.cpp  bfs-worklist.cpp
graphs/: Makefile  README.md  edgeListURLs.txt
graphs/snapPyScripts/: rmat.py
libcommon/include/: csr_graph.h
libsyclutils/: CMakeLists.txt  README.md
libsyclutils/include/: host_csr_graph.h  in_worklist.h  kernel_sizing.h  nvidia_selector.h  out_worklist.h  pipe.h  push_scheduler.h  sycl_csr_graph.h
libsyclutils/src/: host_csr_graph.cpp  nvidia_selector.cpp  push_scheduler.cpp  sycl_driver.cpp
pagerank/: CMakeLists.txt  README.md  pagerank-data-driven.cpp  pagerank-naive.cpp  pagerank-topology-driven.cpp  support.cpp  sycl-out-worklist.h  sycl-pipe.h
projectResults/: parseIterations.R  parsePrelimIterations.R  prelimResults.csv  results.csv
simpleGraphs/: longLineEdgeList.txt
